# shadowrepo-shield

./: .gitignore  DEMO_SCRIPT.md  FINAL_VALIDATION.md  INSTALLATION_GUIDE_LINUX.md  LICENSE  MANUAL_TEST_CHECKLIST_v1.0.0.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.4.0.md  SECURITY.md  index.html  package-lock.json  package.json
.github/workflows/: build-linux-cli.yml  shadowrepo-scan.yml
contracts/: ShadowRepoProof.sol
docs/: architecture.md
release/v0.1.0/windows/: INSTALLATION_GUIDE.md  SHA256SUMS.txt
release/v1.0.0/windows/: INSTALLATION_GUIDE.md  SHA256SUMS.txt
release/v1.0.1/windows/: INSTALLATION_GUIDE.md  SHA256SUMS.txt
release/v1.4.0/linux/: SHA256SUMS.txt  generate-checksums.sh
release/v1.4.0/windows/: INSTALLATION_GUIDE.md  SHA256SUMS.txt
scripts/: deploy.cjs  verify-proof.cjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  ai_keys.example.json  tauri.conf.json
src-tauri/permissions/: commands.toml
src-tauri/src/: cli.rs  commands.rs  db.rs  lib.rs  main.rs  report.rs
src-tauri/src/scanner/: ai.rs  hasher.rs  mod.rs  patterns.rs  risk.rs  types.rs  walker.rs
src-tauri/tests/: integration_test.rs
src/components/: FindingCard.tsx  RiskBadge.tsx  RiskGauge.tsx  ScanProgress.tsx  Sidebar.tsx  StatCard.tsx
src/lib/: blockchain.ts  tauri.ts
src/pages/: Dashboard.tsx  NewScan.tsx  ScanHistory.tsx  ScanResult.tsx  Settings.tsx  VerifyProof.tsx
src/types/: index.ts
test/: ShadowRepoProof.cjs
