[package]
name = "shadowrepo-shield"
version = "1.4.0"
description = "Local-first blockchain security scanner for Web3 developers"
authors = ["ShadowRepo Shield"]
edition = "2021"

[lib]
name = "shadowrepo_shield_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "shadowrepo-cli"
path = "src/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5"
sha2 = "0.10"
hex = "0.4"
regex = "1"
zip = "2"
tempfile = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
printpdf = "0.7"
